# rust-ui

./: .gitignore  Cargo.toml  build.sh  readme.md  rustc-ice-2025-08-12T14_43_01-10816.txt
.github/workflows/: ci.yaml
crates/rust_ui_core/: Cargo.toml
crates/rust_ui_core/src/: layout.rs  lib.rs
crates/rust_ui_core/src/icon/: mod.rs
crates/rust_ui_core/src/modifiers/: background.rs  boxed.rs  font.rs  frame.rs  margin.rs  mod.rs  on_appear.rs  on_tap.rs  sheet.rs
crates/rust_ui_core/src/native/: android_stub.rs  mod.rs
crates/rust_ui_core/src/native/android/: callback.rs  class_loader.rs  classes.dex  helper.rs  mod.rs
crates/rust_ui_core/src/native/android/java/: RustUIOnClickCallback.java  RustUIOnDismiss.java  RustUIRunnable.java  RustUITextWatcher.java
crates/rust_ui_core/src/native/android/views/: button.rs  color.rs  image.rs  mod.rs  multiline_text_editor.rs  on_tap.rs  scrollview.rs  sheet.rs  text.rs  textfield.rs
crates/rust_ui_core/src/native/apple_shared/: mod.rs
crates/rust_ui_core/src/native/ios/: app.rs  click_view.rs  image.rs  mod.rs  multiline_text_editor.rs  scroll_view.rs  sheet.rs  text_field.rs
crates/rust_ui_core/src/native/macos/: app.rs  click_view.rs  image.rs  mod.rs  multiline_text_editor.rs  scrollview.rs  sheet.rs  text_field.rs
crates/rust_ui_core/src/view/: collection.rs  dyn_render.rs  mod.rs  mutable.rs  persistent_storage.rs  resources.rs  state.rs  task.rs  virtual_layout.rs
crates/rust_ui_core/src/views/: button.rs  image.rs  mod.rs  scrollview.rs  tabbar.rs  text.rs  textfield.rs
crates/rust_ui_core/src/views/control_flows/: if_else.rs  list.rs  mod.rs  optional.rs
crates/rust_ui_core/src/views/layout/: mod.rs  spacer.rs  stack.rs
crates/rust_ui_macro/: Cargo.toml
crates/rust_ui_macro/src/: derive_ui.rs  lib.rs
examples/: all_features.rs
examples/apps/let_it_poll/: create_poll_view.rs  main.rs
examples/macros/: colors.rs  counter.rs  counter_complex.rs  for_loop.rs  hello_world.rs  image.rs  text.rs
examples/macros/apps/: calculator.rs
examples/no_macros/: colors.rs  counter.rs  counter_complex.rs  hello_world.rs  image.rs  text.rs
src/: layout.rs  lib.rs  main.rs  views.rs
src/icon/: mod.rs
src/modifiers/: font.rs  margin.rs  mod.rs
src/native/: android_stub.rs  mod.rs
src/native/apple_shared/: mod.rs
src/native/ios/: app.rs  mod.rs
src/native/macos/: app.rs  button.rs  mod.rs
src/view/: collection.rs  dyn_render.rs  mod.rs  mutable.rs  resources.rs  virtual_layout.rs
src/views/: button.rs  mod.rs  tabbar.rs  text.rs
src/views/layout/: spacer.rs  stack.rs
