[package]
name = "rust-ui"
version = "0.0.1"
edition = "2024"
authors = ["Kees van Beilen"]
description = "A truly native mobile focused UI-framework for iOS and android."
readme = "readme.md"
repository = "https://github.com/Kees-van-Beilen/rust-ui"
keywords = ["ui", "ios", "gui", "graphics", "app","framework"]
license = "MIT OR Apache-2.0"
# https://inpolen.nl/profiles/rust-ui/public/assets/ui-icon-dark.svg


[workspace]
members = ["crates/rust_ui_core", "crates/rust_ui_macro"]



[dependencies]
bevy_color = {version="0.15.4",default-features = false}
clone_dyn = "0.43.0"
log = "0.4.27"
syslog = "7.0.0"
tuplex = "0.1.2"
rust_ui_core = {path = "crates/rust_ui_core"}
rust_ui_macro = {path = "crates/rust_ui_macro"}


[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-core-graphics = "0.3.0"
objc2-foundation = "0.3.0"
objc2-quartz-core = "0.3.0"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.0"
objc2-core-graphics = "0.3.0"
objc2-foundation = "0.3.0"
objc2-quartz-core = "0.3.0"
objc2-ui-kit = "0.3.1"
objc2-os-log = "0.3.1"

[[example]]
name = "calculator"
path = "examples/macros/apps/calculator.rs"

[[example]]
name = "hello_world"
path = "examples/macros/hello_world.rs"

[[example]]
name = "image"
path = "examples/macros/image.rs"

[[example]]
name = "colors"
path = "examples/macros/colors.rs"

[[example]]
name = "counter"
path = "examples/macros/counter.rs"

[[example]]
name = "counter_complex"
path = "examples/macros/counter_complex.rs"

[[example]]
name = "text"
path = "examples/macros/text.rs"

[[example]]
name = "wm_hello_world"
path = "examples/no_macros/hello_world.rs"

[[example]]
name = "wm_colors"
path = "examples/no_macros/colors.rs"

[[example]]
name = "wm_counter"
path = "examples/no_macros/counter.rs"

[[example]]
name = "wm_counter_complex"
path = "examples/no_macros/counter_complex.rs"

[[example]]
name = "wm_text"
path = "examples/no_macros/text.rs"

[[example]]
name = "wm_image"
path = "examples/no_macros/image.rs"

# [[example]]
# name = "wm_diary"
# path = "examples/no_macros/full_app/diary.rs"



# for creating an iOS bundle
[package.metadata.bundle]
name = "Rust UI bundle"
identifier = "com.example.myapp"
version = "1.0.0"
# include mobileprovision certificate for uploading this bundle to the appstore or a device
# this is not needed to test the bundle in simulator
resources = ["embedded.mobileprovision"]
short_description = "An example application."
long_description = """
A longer description, but that doesn't change the
fact that this is an  example application.
"""
