[package]
name = "rust_ui_core"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy_color = {version="0.15.4",default-features = false}
clone_dyn = "0.32.0"
log = "0.4.27"
syslog = "7.0.0"
tuplex = "0.1.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
[target.'cfg(target_os = "android")'.dependencies.android2_android]
git = "https://codeberg.org/kees-van-beilen/android2.git"
features = [
    "android.app.Activity",
    "android.app.ActionBar",
    "android.view.Window",
    "android.view.View",
    "android.view.ViewGroup",
    "android.widget.RelativeLayout",
    "android.widget.RelativeLayout.LayoutParams",
    "android.content.Context",
    "android.view.ViewGroup.LayoutParams",
    "android.content.res.Resources",
    "android.app.Fragment",
    "android.util.DisplayMetrics"
]


[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-core-graphics = "0.3.0"
objc2-foundation = "0.3.0"
objc2-quartz-core = "0.3.0"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.1"
objc2 = "0.6.0"
objc2-core-graphics = "0.3.0"
objc2-foundation = "0.3.0"
objc2-quartz-core = "0.3.0"
objc2-ui-kit = "0.3.1"
objc2-os-log = "0.3.1"